# edueval-grading-env

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
server/: app.py
src/data/sample_papers/: task1_easy.json  task2_medium.json  task3_hard.json
src/envs/grading_env/: models.py  structure.txt
src/envs/grading_env/server/: Dockerfile  app.py  environment.py
