[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grading-env"
version = "1.0.0"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "requests==2.31.0",
    "openai==1.23.0",
    "transformers==4.40.0",
    "torch==2.2.2",
    "Pillow==10.3.0",
    "sentence-transformers==2.7.0",
    "numpy<2"
]