[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grading-env"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.4",
    "pydantic-settings>=2.5.2",
    "requests==2.31.0",
    "openai>=1.23.0",
    "transformers==4.40.0",
    "torch==2.2.2",
    "Pillow==10.3.0",
    "sentence-transformers==2.7.0",
    "numpy<2",
    "accelerate==0.30.1",
    "openenv>=0.1.13",
    "fastmcp==2.3.0"
]

[project.scripts]
server = "src.envs.grading_env.server.app:main"